# lwr-sim

./: .gitignore  jacobi.ipynb  logs.ipynb  lwr-sim-2.ops  lwr-sim.ops  lwr-sim2.ops  test.ops  zerog.sdf  zerog.world
lwr_testdriver/: CMakeLists.txt  manifest.xml
lwr_testdriver/src/: CMakeLists.txt  lwr_testdriver-component.cpp  lwr_testdriver-component.hpp
nist_maze_wall_120_low_friction/: model.config  model.sdf
